fixed animation issue with text box not materialiseing correctly, fixed alignment issue with text box not matching up with icon, added text description within text box.

--- a/flaskr/static/file_encrypt.css
+++ b/flaskr/static/file_encrypt.css
@@ -46,7 +46,7 @@ h1 {
     background-position: center;
     top: 114px;
     z-index: -1;
-    opacity: 0.1;
+    opacity: 0.06;
   }
 
 #drop_area{
