--- a/flaskr/static/hash_check.css
+++ b/flaskr/static/hash_check.css
@@ -44,7 +44,7 @@ h1 {
     background-position: center;
     top: 114px;
     z-index: -1;
-    opacity: 0.1;
+    opacity: 0.06;
   }
   
 
