--- a/flaskr/static/login.css
+++ b/flaskr/static/login.css
@@ -26,15 +26,68 @@ h1 {
 
 }
 
-nav{
-    background-color: #181d24;
+/*NAV BAR*/
+#nav_bar{
+    list-style: none;
     display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 40px;
-    box-shadow:
-    0px 0px 10px 10px rgba(0, 0, 0, 0.3);
+    flex-direction: row;
+    justify-content: space-between;
+    
 }
+
+li, li > a{
+    font-size: 1.2em;
+    color: var(--main_colour_white);
+    font-family: var(--font)
+}
+
+li > a{
+    font-size: 1em;
+    text-decoration: none;
+}
+
+#nav_bar > div {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+#nav_bar > div > img{
+    height: 2.5em;
+    width: auto;
+}
+
+#nav_bar > div > img:hover{
+    animation: spin 733ms ease-in-out 1;
+}
+
+@keyframes spin{
+    0%{
+        transform: rotate(0deg);
+    }
+
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+.log_in_out{
+    gap: 2em;
+    margin-right: 3em;
+}
+
+.log_in_out li{
+    transition: transform 222ms ease-out;
+
+}
+
+.log_in_out li:hover{
+    cursor: pointer;
+    transform: scale(1.2);
+
+}
+
+/*NAV BAR END*/
 
 div.header_text{
     display: flex;
